--- a/gui/preferenceswindow.glade
+++ b/gui/preferenceswindow.glade
@@ -769,6 +769,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
           <object class="GtkLabel" id="label8">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes" context="Prefs Dialog|View|">&lt;b&gt;Zoom and Rendering&lt;/b&gt;</property>
             <property name="use_markup">True</property>
@@ -784,6 +786,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">12</property>
+            <property name="hexpand">False</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes">Default zoom level:</property>
           </object>
@@ -797,6 +801,7 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
             <property name="model">default_zoom_level_liststore</property>
             <property name="active">2</property>
             <property name="id_column">0</property>
@@ -819,6 +824,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_top">18</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes" context="Prefs Dialog|View|">&lt;b&gt;Interface&lt;/b&gt;</property>
             <property name="use_markup">True</property>
@@ -834,6 +841,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">12</property>
+            <property name="hexpand">False</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="yalign">0</property>
             <property name="label" translatable="yes" context="Prefs Dialog|View|Interface|">Toolbar icon size:</property>
@@ -848,6 +857,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">12</property>
+            <property name="hexpand">False</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes" context="Prefs Dialog|View|Interface|">Freehand cursor type:</property>
           </object>
@@ -883,6 +894,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">12</property>
+            <property name="hexpand">False</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes" context="Prefs Dialog|View|Interface|">Dark theme variant:</property>
           </object>
@@ -897,6 +910,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="tooltip_text" translatable="yes" context="Prefs Dialog|View|Interface|Dark theme variant|checkbox tooltip">Use a light-on-dark theme variant, when it's supported by the GTK theme. This is generally sensible for image editors and media viewers.</property>
+            <property name="hexpand">True</property>
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
             <signal name="toggled" handler="dark_theme_toggled_cb" swapped="no"/>
@@ -925,7 +940,7 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
           </object>
           <packing>
             <property name="left_attach">0</property>
-            <property name="top_attach">7</property>
+            <property name="top_attach">8</property>
             <property name="width">3</property>
           </packing>
         </child>
@@ -933,6 +948,8 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
           <object class="GtkBox" id="box3">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
             <property name="orientation">vertical</property>
             <property name="spacing">6</property>
             <child>
@@ -986,6 +1003,7 @@ This is MyPaint's old behaviour, and can be used as a stopgap for non-sRGB worki
             <property name="tooltip_markup" translatable="yes" context="Prefs Dialog|View|Zoom|">Draw a real checkerboard pattern to show transparency.
 This slows down the display, but can be less confusing.</property>
             <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
             <signal name="toggled" handler="real_alpha_checks_checkbutton_toggled_cb" swapped="no"/>
@@ -1000,12 +1018,53 @@ This slows down the display, but can be less confusing.</property>
           <object class="GtkLabel" id="label30">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="margin_left">12</property>
+            <property name="hexpand">False</property>
+            <property name="vexpand">False</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes">When showing transparency:</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
             <property name="top_attach">2</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="label39">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="margin_left">12</property>
+            <property name="hexpand">False</property>
+            <property name="vexpand">False</property>
+            <property name="xalign">0</property>
+            <property name="label" translatable="yes" context="Prefs Dialog|View|Interface|">Handle smooth scrolling events:</property>
+          </object>
+          <packing>
+            <property name="left_attach">0</property>
+            <property name="top_attach">7</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkCheckButton" id="smooth_scrolling_checkbutton">
+            <property name="label" translatable="yes" context="Prefs Dialog|View|Interface|Handle smooth scrolling events|checkbox label">When devices send them</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="tooltip_text" translatable="yes" context="Prefs Dialog|View|Interface|Handle smooth scrolling events|checkbox tooltip">Smooth scrolling support makes scroll gestures and scrollwheel events from some devices smooth rather than in steps. It's good for touchpads, but can be irritating if you're used to mouse scrolling.
+
+If smooth scrolling is supported, stepwise scrolling can be turned back on briefly by holding the shift key down while scrolling.
+
+Scrolling to pan the view needs this setting to be turned on, and for your device to be configured to send bidirectional scroll events.</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
+            <property name="xalign">0</property>
+            <property name="draw_indicator">True</property>
+            <signal name="toggled" handler="smooth_scrolling_toggled_cb" swapped="no"/>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="top_attach">7</property>
+            <property name="width">2</property>
           </packing>
         </child>
       </object>
