--- a/gui/inktool.glade
+++ b/gui/inktool.glade
@@ -210,6 +210,21 @@ Negative values mean leftwards tilts.</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
+            <property name="top_attach">5</property>
+            <property name="width">2</property>
+            <property name="height">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="insert_point_button">
+            <property name="label" translatable="yes">Insert Point</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <signal name="clicked" handler="_insert_point_button_clicked_cb" swapped="no"/>
+          </object>
+          <packing>
+            <property name="left_attach">0</property>
             <property name="top_attach">4</property>
             <property name="width">2</property>
             <property name="height">1</property>
