--- a/gui/autorecover.glade
+++ b/gui/autorecover.glade
@@ -45,6 +45,7 @@ You can always launch this dialog from the ‘File’ menu when MyPaint is runni
                 <property name="use_underline">True</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
+                <signal name="toggled" handler="_at_startup_checkbutton_toggled_cb" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
