transparent pngs: handle default transparency
Add possibility to save transparent png's by default.
When saving with existent filename (no save dialog), default to saving
with transparent background: if the open image has a transparent
background, that's the right thing to do. If it doesn't, then the
background is opaque anyway.

--- a/gui/preferenceswindow.glade
+++ b/gui/preferenceswindow.glade
@@ -24,6 +24,10 @@
         <col id="1" translatable="yes" context="Prefs Dialog|Saving|Save Formats and Locations|Default|">OpenRaster (*.ora)</col>
       </row>
       <row>
+        <col id="0">png-trans</col>
+        <col id="1" translatable="yes" context="Prefs Dialog|Saving|Save Formats and Locations|Default|">PNG transparent (*.png)</col>
+      </row>
+      <row>
         <col id="0">png-solid</col>
         <col id="1" translatable="yes" context="Prefs Dialog|Saving|Save Formats and Locations|Default|">PNG solid with background (*.png)</col>
       </row>
